--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/${BIN_DIR_SUFFIX})
 
 #include directories
 include_directories(${PROJECT_SOURCE_DIR}/src)
-include_directories(${PROJECT_SOURCE_DIR}/kinect/include)
+include_directories(${PROJECT_SOURCE_DIR}/kinect/include/nite)
 include_directories(${PROJECT_SOURCE_DIR}/kinect/include/openni)
 include_directories(/homebrew/include)
 include_directories(/usr/local/include)
