use correct feature data, display user pixels.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,14 +30,26 @@ ${KINECT_DEP}/lib/libXnVHandGenerator_1_4_1.dylib
 ${KINECT_DEP}/lib/libXnVNite_1_4_1.dylib
 )
 
-set(CFG_FILES
+set(GENERAL_CFG_FILES
 ${KINECT_DEP}/config/modules.xml
 ${KINECT_DEP}/config/licenses.xml
-${KINECT_DEP}/config/FeatureExtraction.ini
-${KINECT_DEP}/config/h.dat
-${KINECT_DEP}/config/s.dat
 ${KINECT_DEP}/config/GlobalDefaults.ini
-${KINECT_DEP}/config/Nite.ini
+)
+
+set(FEATURE_CFG_FILES
+${KINECT_DEP}/config/feature/FeatureExtraction.ini
+${KINECT_DEP}/config/feature/h.dat
+${KINECT_DEP}/config/feature/s.dat
+)
+
+set(HAND_CFG_FILES
+${KINECT_DEP}/config/hand/Nite.ini
+)
+
+set(CFG_FILES
+${GENERAL_CFG_FILES}
+${FEATURE_CFG_FILES}
+${HAND_CFG_FILES}
 )
 
 SOURCE_GROUP("Resources" FILES ${RESOURCE})
@@ -56,4 +68,7 @@ SET( MACOSX_BUNDLE_COPYRIGHT "Jiawei Ou allright reserved..")
 
 SET_SOURCE_FILES_PROPERTIES(icon.icns PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
 SET_SOURCE_FILES_PROPERTIES(${DYLIB} PROPERTIES MACOSX_PACKAGE_LOCATION Frameworks)
-SET_SOURCE_FILES_PROPERTIES(${CFG_FILES} PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
+SET_SOURCE_FILES_PROPERTIES(${GENERAL_CFG_FILES} PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
+SET_SOURCE_FILES_PROPERTIES(${FEATURE_CFG_FILES} PROPERTIES MACOSX_PACKAGE_LOCATION Resources/feature)
+SET_SOURCE_FILES_PROPERTIES(${HAND_CFG_FILES} PROPERTIES MACOSX_PACKAGE_LOCATION Resources/hand)
+
